got the classList error corrected

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <section>
       <div id="counterBox" class="turn"></div>
      <row>
-       <div id='red' class='tiles'></div>
-       <div id='blue' class='tiles'></div>
+       <div id='red' class='.active'></div>
+       <div id='blue' class='.active'></div>
       </row>
     </section>
     <section>
       <row>
-        <div id="yellow" class='tiles'></div>
-        <div id="green" class='tiles'></div>
+        <div id="yellow" class='.active'></div>
+        <div id="green" class='.active'></div>
       </row>
     </section>
     <section class='buttons'>
